...
    label: 'Orders',
    icon: <Icon name="orders" weight="linear" />,
    activeIcon: <Icon name="orders" weight="bold" />,
  },
  {
    key: 'notifications',
    label: 'Alerts',
    icon: <Icon name="bell" weight="linear" />,
    activeIcon: <Icon name="bell" weight="bold" />,
  },
  {
    key: 'profile',
    label: 'Profile',
...
